--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <header>
-        <h1>Gym Pro</h1>
+        <h1> GYM FITNESS </h1>
         <p>Your Professional Fitness Partner</p>
     </header>
     <nav>
